--- a/style.css
+++ b/style.css
@@ -26,6 +26,13 @@ div > div {
 .adjust1 {
 	position: absolute;
 	right : 15%;
+	background-color: 		rgb(0, 128, 255);
+	padding: 5px 10px;
+	font-size: 16px;
+	color: white;
+	cursor: pointer;
+	border: none;
+	border-radius: 4px;
 }
 
 #p1 {
